--- a/reportwidgets/embeddedwidget/partials/_widget.htm
+++ b/reportwidgets/embeddedwidget/partials/_widget.htm
@@ -14,6 +14,7 @@
             frameborder="0"
             marginheight="0"
             marginwidth="0"
+            onload="iFrameResize()"
         ></iframe>
     <?php else: ?>
         <div class="callout callout-warning">
